{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 8,
  "lineage": "e1ce3675-e6c8-6605-8a86-d2acf90510d3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "k3s_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.170.80.95",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-02-18T22:40:35.483-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/regions/us-central1/addresses/edu-k3s-vm-ip",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "edu-k3s-vm-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/regions/us-central1/addresses/edu-k3s-vm-ip",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_nodeport",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "30000-32767"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-18T22:41:11.969-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/global/firewalls/edu-k3s-vm-allow-http",
            "log_config": [],
            "name": "edu-k3s-vm-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/firewalls/edu-k3s-vm-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "edu-k3s-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k3s_vpc",
            "google_project_service.required"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-02-18T22:41:12.181-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/global/firewalls/edu-k3s-vm-allow-ssh",
            "log_config": [],
            "name": "edu-k3s-vm-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc",
            "params": [],
            "priority": 1000,
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/firewalls/edu-k3s-vm-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "edu-k3s-vm"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k3s_vpc",
            "google_project_service.required"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k3s_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "SEV_CAPABLE",
                  "SEV_SNP_CAPABLE",
                  "SEV_LIVE_MIGRATABLE",
                  "SEV_LIVE_MIGRATABLE_V2",
                  "IDPF",
                  "TDX_CAPABLE",
                  "UEFI_COMPATIBLE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260218",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 30,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/zones/us-central1-a/disks/edu-k3s-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "creation_timestamp": "2026-02-18T22:41:27.530-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true",
              "managed_by": "terraform",
              "owner": "devops-class",
              "purpose": "education",
              "stack": "gce-k3s",
              "stage": "training"
            },
            "enable_display": false,
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/zones/us-central1-a/instances/edu-k3s-vm",
            "instance_id": "5506365333171801720",
            "label_fingerprint": "jDnk3oilm98=",
            "labels": {
              "managed_by": "terraform",
              "owner": "devops-class",
              "purpose": "education",
              "stack": "gce-k3s",
              "stage": "training"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "hoda067:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBSLSwaI8jMhTivcz0fgv6F6blDlSTEfRLHIrEnY+Be8 hoda067"
            },
            "metadata_fingerprint": "zcFXGx84EnY=",
            "name": "edu-k3s-vm",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.170.80.95",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc",
                "network_ip": "10.40.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/regions/us-central1/subnetworks/edu-k3s-subnet",
                "subnetwork_project": "project-8d8e946e-d1b3-4114-8ed"
              }
            ],
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/zones/us-central1-a/instances/edu-k3s-vm",
            "service_account": [
              {
                "email": "1058951561679-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "edu-k3s-vm"
            ],
            "tags_fingerprint": "qjHp3RJ9YAs=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true",
              "managed_by": "terraform",
              "owner": "devops-class",
              "purpose": "education",
              "stack": "gce-k3s",
              "stage": "training"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_compute_image.ubuntu",
            "google_compute_address.k3s_ip",
            "google_compute_firewall.allow_http_nodeport",
            "google_compute_firewall.allow_ssh",
            "google_compute_network.k3s_vpc",
            "google_compute_subnetwork.k3s_subnet",
            "google_project_service.required"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "k3s_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "bgp_always_compare_med": false,
            "bgp_best_path_selection_mode": "LEGACY",
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc",
            "mtu": 0,
            "name": "edu-k3s-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "network_id": "8208705223342624393",
            "numeric_id": "8208705223342624393",
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "k3s_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-02-18T22:41:12.848-08:00",
            "enable_flow_logs": false,
            "gateway_address": "10.40.0.1",
            "id": "projects/project-8d8e946e-d1b3-4114-8ed/regions/us-central1/subnetworks/edu-k3s-subnet",
            "ip_cidr_range": "10.40.0.0/24",
            "name": "edu-k3s-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/global/networks/edu-k3s-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-8d8e946e-d1b3-4114-8ed",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-8d8e946e-d1b3-4114-8ed/regions/us-central1/subnetworks/edu-k3s-subnet",
            "stack_type": "IPV4_ONLY",
            "subnetwork_id": 7838788559245610599
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.k3s_vpc",
            "google_project_service.required"
          ]
        }
      ]
    }
  ]
}